Fixed drawer alignment.

--- a/src/components/UI/Drawer/Drawer.scss
+++ b/src/components/UI/Drawer/Drawer.scss
@@ -24,9 +24,13 @@
 
     .collapsible {
         margin-bottom: 200px;
+        max-width: 100%;
         transition: all 0.2s ease-in-out;
 
-        .collapsible-inner {
+        &-inner {
+            min-width: 100%;
+            padding: $s3;
+            width: max-content;
             position: absolute;
         }
     }
@@ -57,9 +61,9 @@
 .drawer-inner {
     color: #fff;
     width: 100%;
-    padding: $s3;
     font-size: 0.9rem;
     min-width: 100%;
+    padding-bottom: $s6;
 
     .drawer__header {
         font-size: 1.05rem;
